<resources>
    <string name="app_name">MovieTime</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an Account</string>
    <string name="WelcomeApp">Welcome to MovieTime</string>
    <string name="popular_movies">Popular</string>
    <string name="best_rated_movies">Best Rated</string>
    <string name="upcoming_movies">Upcoming</string>
    <string name="error_username">Username not entered, try again!</string>
    <string name="error_email">Email not entered, try again!</string>
    <string name="error_pass">You must fill in the password, try again!</string>
    <string name="different_passwords">The two passwords are not the same, try again!</string>
    <string name="success_register">Successful registration!</string>
    <string name="invalid_register">Invalid registration, try again!</string>
    <string name="update_data_saved">Your data has been saved successfully</string>
    <string name="error_update_data">Your data has not been updated, please try again!</string>
    <string name="error_login">Wrong login, try again!</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_edit_profile">Profile</string>
    <string name="error_obtain_lists">Error in obtaining the list of films!</string>
    <string name="failure_obtain_lists">Failure in obtaining the list of films!</string>
    <string name="edit_profile">Edit Your Account</string>
    <string name="release_date">Release Date |</string>
    <string name="vote_average">Vote Average |</string>
    <string name="sinopse">Synopsis</string>
    <string name="reviews">Reviews</string>
    <string name="add_favorites">Added to Favorites Movies!</string>
    <string name="error_add_favorites">Error when adding to Favorites Movies!</string>
    <string name="removed_favorites">Removed from favorites!</string>
    <string name="back_btn">Back</string>
    <string name="favorites">Favorites</string>
    <string name="title_activity_movie_details_tabb">MovieDetailsTabb</string>
    <string name="Movie">Movie</string>
    <string name="Trailers">Trailers</string>
    <string name="Reviews">Reviews</string>
    <string name="title_activity_movie_details_fragment">MovieDetailsFragment</string>
    <string name="title_activity_details_tabb">DetailsTabbActivity</string>
    <string name="tab_text_1">Movie</string>
    <string name="tab_text_2">Trailers</string>
    <string name="tab_text_3">Reviews</string>
    <string name="title_activity_tabb_details">TabbDetailsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_btn">Search</string>
    <string name="there_are_no_reviews">There are no reviews</string>
    <string name="there_are_no_tarilers">There are no tarilers</string>
</resources>